TAV-247 fix overflow of component boxes 02

--- a/app/assets/stylesheets/taverna_lite/workflow_profile.css
+++ b/app/assets/stylesheets/taverna_lite/workflow_profile.css
@@ -33,11 +33,11 @@
 
 
 .edit_components { min-height:300px; height:auto !important; height:300px;}
-#component_list { float: left; width: 24%; }
-#component_details { float: left; width: 46%;  border: solid 1px #3300CC;
+#component_list { float: left; width: 25%; }
+#component_details { float: left; width: 48%;  border: solid 1px #3300CC;
   -moz-border-radius: 16px;-webkit-border-radius: 16px;border-radius: 16px;
   border: solid 1px #3300CC; padding: 0.4em;}
-#component_operations {float: left; width: 24%; margin: 1px; padding: 1px; }
+#component_operations {float: left; width: 25%; margin: 1px; padding: 1px; }
 dl.list_any, dt.list_title, dd.list_description,dt.list_title_chk, dd.list_description_chk  {
  padding:0;
   margin:0
